tests/neg/i22670/i22670-usage.scala

//import `X-Y`.*
import xy.foo

val x = foo // Cyclic macro dependencies (if compilation proceeds)
